; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libibverbs/extr_cmd.c_ibv_cmd_destroy_flow.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libibverbs/extr_cmd.c_ibv_cmd_destroy_flow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibv_flow = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }
%struct.ibv_destroy_flow = type { i32 }

@DESTROY_FLOW = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ibv_cmd_destroy_flow(%struct.ibv_flow* %0) #0 {
  %2 = alloca %struct.ibv_flow*, align 8
  %3 = alloca %struct.ibv_destroy_flow, align 4
  %4 = alloca i32, align 4
  store %struct.ibv_flow* %0, %struct.ibv_flow** %2, align 8
  store i32 0, i32* %4, align 4
  %5 = call i32 @memset(%struct.ibv_destroy_flow* %3, i32 0, i32 4)
  %6 = load i32, i32* @DESTROY_FLOW, align 4
  %7 = call i32 @IBV_INIT_CMD_EX(%struct.ibv_destroy_flow* %3, i32 4, i32 %6)
  %8 = load %struct.ibv_flow*, %struct.ibv_flow** %2, align 8
  %9 = getelementptr inbounds %struct.ibv_flow, %struct.ibv_flow* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = getelementptr inbounds %struct.ibv_destroy_flow, %struct.ibv_destroy_flow* %3, i32 0, i32 0
  store i32 %10, i32* %11, align 4
  %12 = load %struct.ibv_flow*, %struct.ibv_flow** %2, align 8
  %13 = getelementptr inbounds %struct.ibv_flow, %struct.ibv_flow* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @write(i32 %16, %struct.ibv_destroy_flow* %3, i32 4)
  %18 = sext i32 %17 to i64
  %19 = icmp ne i64 %18, 4
  br i1 %19, label %20, label %22

20:                                               ; preds = %1
  %21 = load i32, i32* @errno, align 4
  store i32 %21, i32* %4, align 4
  br label %22

22:                                               ; preds = %20, %1
  %23 = load %struct.ibv_flow*, %struct.ibv_flow** %2, align 8
  %24 = call i32 @free(%struct.ibv_flow* %23)
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @memset(%struct.ibv_destroy_flow*, i32, i32) #1

declare dso_local i32 @IBV_INIT_CMD_EX(%struct.ibv_destroy_flow*, i32, i32) #1

declare dso_local i32 @write(i32, %struct.ibv_destroy_flow*, i32) #1

declare dso_local i32 @free(%struct.ibv_flow*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
